--- a/tpSpringD/tpSpringDWeb/src/main/webapp/comptes.xhtml
+++ b/tpSpringD/tpSpringDWeb/src/main/webapp/comptes.xhtml
@@ -6,9 +6,9 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<h:header>
+<h:head>
 	<title>comptes</title>
-</h:header>
+</h:head>
 <h:body>
    <h:form>
       numClient: <h:inputText  value="#{compteMBean.numClient}"/> <br/>
