debut WS REST en mode GET (springMvc)

--- a/springBootWebServiceD/src/main/resources/static/index.html
+++ b/springBootWebServiceD/src/main/resources/static/index.html
@@ -8,6 +8,8 @@
 	<h1>welcome to springBootWebService</h1>
 	<hr/>
 	<a href="./service">liste des WS</a><br/>
-	...
+	<hr/>
+	<h3>url de test pour web service REST</h3>
+	<a href="./rest/devises/EUR">devise EUR en JSON via REST/GET</a><br/>
 </body>
 </html>
