--- a/springBootWebServiceD/src/main/resources/static/index.html
+++ b/springBootWebServiceD/src/main/resources/static/index.html
@@ -11,5 +11,6 @@
 	<hr/>
 	<h3>url de test pour web service REST</h3>
 	<a href="./rest/devises/EUR">devise EUR en JSON via REST/GET</a><br/>
+	<a href="./rest/devises">toutes les devises en JSON via REST/GET</a><br/>
 </body>
 </html>
