--- a/springBootWebServiceD/src/main/resources/static/index.html
+++ b/springBootWebServiceD/src/main/resources/static/index.html
@@ -12,5 +12,6 @@
 	<h3>url de test pour web service REST</h3>
 	<a href="./rest/devises/EUR">devise EUR en JSON via REST/GET</a><br/>
 	<a href="./rest/devises">toutes les devises en JSON via REST/GET</a><br/>
+	<a href="./rest/devises?tauxChangeMini=1">devises?tauxChangeMini=1</a><br/>
 </body>
 </html>
