--- a/springBootWebServiceD/src/main/resources/static/index.html
+++ b/springBootWebServiceD/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>welcome to springBootWebService</h1>
 	<hr/>
-	<a href="./service">liste des WS</a><br/>
+	<a href="./service">liste des WS soap gérés par cxf</a><br/>
 	<hr/>
 	<h3>url de test pour web service REST</h3>
 	<a href="./rest/devises/EUR">devise EUR en JSON via REST/GET</a><br/>
