avec convertir et dto ResConv

--- a/springBootWebServiceD/src/main/resources/static/index.html
+++ b/springBootWebServiceD/src/main/resources/static/index.html
@@ -13,5 +13,6 @@
 	<a href="./rest/devises/EUR">devise EUR en JSON via REST/GET</a><br/>
 	<a href="./rest/devises">toutes les devises en JSON via REST/GET</a><br/>
 	<a href="./rest/devises?tauxChangeMini=1">devises?tauxChangeMini=1</a><br/>
+	<a href="./rest/devises/convertir?montant=50&source=EUR&cible=USD">conversion</a><br/>
 </body>
 </html>
