debut appel_ajax

--- a/springBootWebServiceD/src/main/resources/static/index.html
+++ b/springBootWebServiceD/src/main/resources/static/index.html
@@ -9,6 +9,8 @@
 	<hr/>
 	<a href="./service">liste des WS soap gérés par cxf</a><br/>
 	<hr/>
+	<a href="./appel_ajax.html">appel_ajax de WS REST (js/jquery)</a>
+	<hr>
 	<h3>url de test pour web service REST</h3>
 	<a href="./rest/devises/EUR">devise EUR en JSON via REST/GET</a><br/>
 	<a href="./rest/devises">toutes les devises en JSON via REST/GET</a><br/>
