SUITE appel ajax

--- a/springBootWebServiceD/src/main/resources/static/appel_ajax.html
+++ b/springBootWebServiceD/src/main/resources/static/appel_ajax.html
@@ -4,7 +4,21 @@
 <script src="lib/jquery-3.4.0.min.js"></script>
 <script>
 $(function() {
-	$('#idDivMessage').html("coucou");
+	$('#idDivMessage').html("message au demarrage");
+
+	$('#idBtnSave').on('click',function(){
+		var devise = {
+				  code : null,
+				  monnaie : null,
+				  tauxChange : null
+				};
+		devise.code = $('#idCode').val();
+		devise.monnaie = $('#idMonnaie').val();
+		devise.tauxChange = Number( $('#idTauxChange').val() );
+		var deviseAsJsonString = JSON.stringify(devise);
+		$('#idDivMessage').html("message apres clic : " + deviseAsJsonString);
+	});
+	
 })
 </script>
 <meta charset="ISO-8859-1">
