--- a/jeeAppX/jeeAppXWeb/src/main/webapp/conv.xhtml
+++ b/jeeAppX/jeeAppXWeb/src/main/webapp/conv.xhtml
@@ -8,13 +8,25 @@
 
 <h:head>
 	<title>conversions</title>
+	<script>
+       function callJsfAjax(){
+           var booleanValue = document.getElementById("idForm:idCheckBox").checked;
+           console.log("booleanValue="+booleanValue);
+           document.getElementById("idForm:idCheckBox").click();
+       }
+	</script>
 </h:head>
 <h:body>
-   <h:form>
+   <input type="button" value="javascript button" onclick='callJsfAjax()' /> <br/> 
+   <h:form id="idForm">
        montantEuro: <h:inputText  value="#{xxMBean.montantEuro}"/> <br/>
       <h:commandButton value="euroToFranc" action="#{xxMBean.doEuroToFranc}" />
+      <h:selectBooleanCheckbox style="visibility:hidden" id="idCheckBox"
+          valueChangeListener="#{xxMBean.onSomethingChange}">
+          <f:ajax event="change" render="idMontantFranc"/>
+      </h:selectBooleanCheckbox> 
    </h:form> <br/>
-    montantFranc: <h:outputText  value="#{xxMBean.montantFranc}"/> <br/>
+    montantFranc: <h:outputText id="idMontantFranc" value="#{xxMBean.montantFranc}"/> <br/>
     <hr/>
 	<h:form>
        montantSource: <h:inputText  value="#{xxMBean.montantSource}"/> <br/>
